--- a/homepage.html
+++ b/homepage.html
@@ -34,7 +34,7 @@
     <div class="container">
         <h1>Welcome to Northwind Grocery</h1>
         <p>Discover a wide variety of food products at Northwind Grocery.</p>
-        <a href="homepage.html" class="button">Search Products</a>
+        <a href="search.html" class="button">Search Products</a>
     </div>
 </body>
 </html>
